[sass] nesting, partials, map-get, variables, readme

--- a/html/productos-servicios.html
+++ b/html/productos-servicios.html
@@ -94,7 +94,7 @@
                     <section class="col-lg-8 col-md-12 col-sm-12 catalogo">
                         <h1 class="titulocatalogo">Camisetas Raneo</h1>
                         <article class="productos">
-                            <div>
+                            <div class="rotate-in-center">
                                 <br>
                                 <img class="imgproducto" src="../assets/diseño1.png" alt="">
                                 <p>Camiseta 1</p>
@@ -103,7 +103,7 @@
                                 <br><br>
                             </div>
                             <br><br>
-                            <div>
+                            <div class="rotate-in-center">
                                 <br>
                                 <img class="imgproducto" src="../assets/diseño2.png" alt="">
                                 <p>Camiseta 2</p>
@@ -112,7 +112,7 @@
                                 <br><br>
                             </div>
                             <br><br>
-                            <div>
+                            <div class="rotate-in-center">
                                 <br>
                                 <img class="imgproducto" src="../assets/diseño3.png" alt="">
                                 <p>Camiseta 3</p>
@@ -121,7 +121,7 @@
                                 <br><br>
                             </div>
                             <br><br>
-                            <div>
+                            <div class="rotate-in-center">
                                 <br>
                                 <img class="imgproducto" src="../assets/diseño4.png" alt="">
                                 <p>Camiseta 4</p>
@@ -130,7 +130,7 @@
                                 <br><br>
                             </div>
                             <br><br>
-                            <div>
+                            <div class="rotate-in-center">
                                 <br>
                                 <img class="imgproducto" src="../assets/diseño5.png" alt="">
                                 <p>Camiseta 5</p>
@@ -139,7 +139,7 @@
                                 <br><br>
                             </div>
                             <br><br>
-                            <div>
+                            <div class="rotate-in-center">
                                 <br>
                                 <img class="imgproducto" src="../assets/diseño6.png" alt="">
                                 <p>Camiseta 6</p>
