Corrijo espacios, agrego BS a página Tallas y Modelos, cambio colores, corrijo footer

--- a/html/productos-servicios.html
+++ b/html/productos-servicios.html
@@ -50,22 +50,19 @@
                             <fieldset class="filtros">
                                 <legend>Filtros: </legend><br>
                                 <input type="checkbox" name="" id="">
-                                <label for="">Caricatura animal</label><br>
+                                <label for="">Caricatura animal</label>
                                 <input type="checkbox" name="" id="">
-                                <label for="">Irreverente</label><br>
+                                <label for="">Irreverente</label>
                                 <input type="checkbox" name="" id="">
-                                <label for="">Minimalista</label><br>
-                                <br>
+                                <label for="">Minimalista</label>
                                 <input type="submit" value="Filtrar">
-                                <br><br>
                             </fieldset>
                         </form>
                     </article>
-                    <br>
                     <article class="col-lg-6 col-md-4 col-sm-12 orden">
                         <img class="ordenarimg" src="../assets/ordenar.png" alt="Ordenar según...">
                         <form class="ordenar" action="" method="">
-                            <label for="">Ordenar por:</label><br>
+                            <label for="">Ordenar por:</label>
                             <select name="" id="">   
                                 <option value=""></option>
                                 <option value="">Precio menor a mayor</option>
@@ -156,10 +153,12 @@
                     </div>
                 </ul>
             </div>
-            <div class="col-md-4 col-lg-4 col-sm-6">
-                <ul class="footerpaypal">
-                    <li><img src="../assets/paypal-logo.png" alt="PayPal"></li>
-                    <a href="https://www.paypal.com/cl/home">PayPal</a>
+            <div class="col-md-4 col-lg-3 col-sm-6">
+                <ul>
+                    <div class="footerpaypal">
+                        <li><img src="../assets/paypal-logo.png" alt="PayPal"></li>
+                        <a href="https://www.paypal.com/cl/home">PayPal</a>
+                    </div>
                 </ul>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
