--- a/html/tallas-modelos.html
+++ b/html/tallas-modelos.html
@@ -14,76 +14,73 @@
     <title>Tallas y Modelos</title>
 </head>
 <body>
-    <div class="gctallasymodelos">
-        <header class="gctallasymodelosh">
-            <div class="banner">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                    <div class="container-fluid">
-                      <a class="navbar-brand" href="../index.html"><img class="logo" src="../assets/raneo.jpg" alt="Raneo"></a>
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <div class="container-fluid">
+        <header class="row">
+            <nav class="col navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img class="logo" src="../assets/raneo.jpg" alt="Raneo"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                          <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link" href="./productos-servicios.html">Productos/Servicios</a>
-                          </li>
-                          <li class="nav-item">
-                            <a class="nav-link active" href="./tallas-modelos.html">Tallas/Modelos</a>
-                          </li>  
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./productos-servicios.html">Productos/Servicios</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./tallas-modelos.html">Tallas/Modelos</a>
+                            </li>
                         </ul>
-                      </div>
                     </div>
-                </nav>
-            </div>
-            <br>
+                </div>
+            </nav>
         </header>
         <hr>
-        <main class="gctallasymodelosm">
+        <main class="row gctallasymodelosm">
             <h1>Tallas y Modelos</h1>
-            <section class="tallasymodelos">
-                    <div class="imgmodelo">
-                        <img class="modelo" src="../assets/modelooversize.png" alt="Modelo Oversize">
-                    </div>
-                    <div class="textotallasymodelos">
+            <section class="col tallasymodelos">
+                <div class="row tallasymodelos">
+                    <div class="col-lg-3 col-md-12 col-sm-12 textotallasymodelos">
                         <h2>Oversize</h2>
                         <p>El modelo <strong>oversize</strong> se caracteriza por un corte amplio y holgado que aporta comodidad y estilo moderno. Con mangas largas que caen por debajo del bíceps y hombros ligeramente caídos, este diseño es ideal para looks urbanos y relajados. Perfecto para quienes buscan un estilo fresco y desenfadado.</p>
                     </div>
-                    <div class="imgmedidas">
-                        <img class="medidas" src="../assets/medidasoversize.png" alt="Medidas Oversize">
+                    <div class="col-lg-8 col-md-12 col-sm-12 modelmedid">
+                        <img class="modelo" src="../assets/modelooversize.png" alt="Modelo Oversize">
+                        <img class="col-12 medidas" src="../assets/medidasoversize.png" alt="Medidas Oversize">
                     </div>
+                </div>
             </section>
-            <section class="tallasymodelos">
-                    <div class="imgmodelo">
-                        <img class="modelo" src="../assets/modeloslimfit.png" alt="Modelo Slim Fit">
-                    </div>
-                    <div class="textotallasymodelos">
+            <section class="col tallasymodelos">
+                <div class="row tallasymodelos">
+                    <div class="col-lg-3 col-md-12 col-sm-12 textotallasymodelos">
                         <h2>Slim Fit</h2>
                         <p>El modelo <strong>slim fit</strong> ofrece un ajuste entallado que resalta la figura, con un corte ajustado al torso y mangas ceñidas. Es ideal para un look moderno y estilizado, perfecto para combinar con prendas formales o casuales. Su diseño versátil lo convierte en una opción elegante y cómoda para cualquier ocasión.</p>
                     </div>
-                    <div class="imgmedidas">
+                    <div class="col-lg-8 col-md-12 col-sm-12 modelmedid">
+                        <img class="modelo" src="../assets/modeloslimfit.png" alt="Modelo Slim Fit">
                         <img class="medidas" src="../assets/medidasslimfit.png" alt="Medidas Slim Fit">
                     </div>
+                </div>
             </section>
-            <section class="tallasymodelos">
-                    <div class="imgmodelo">
-                        <img class="modelo" src="../assets/modeloregularfit.png" alt="Modelo Regular Fit">
-                    </div>
-                    <div class="textotallasymodelos">
+            <section class="col tallasymodelos">
+                <div class="row tallasymodelos">
+                    <div class="col-lg-3 col-md-12 col-sm-12 textotallasymodelos">
                         <h2>Regular Fit</h2>
                         <p>El modelo <strong>regular fit</strong> ofrece un corte clásico y cómodo, con un ajuste equilibrado que no es ni demasiado holgado ni muy ceñido. Sus líneas rectas y mangas de tamaño estándar lo hacen ideal para cualquier tipo de cuerpo. Es versátil, perfecto para looks casuales o semi-formales, y un básico imprescindible.</p>
                     </div>
-                    <div class="imgmedidas">
+                    <div class="col-lg-8 col-md-12 col-sm-12 modelmedid">
+                        <img class="modelo" src="../assets/modeloregularfit.png" alt="Modelo Regular Fit">
                         <img class="medidas" src="../assets/medidasregularfit.png" alt="Medidas Regular Fit">
                     </div>
+                </div>
             </section>
         </main>
         <hr>
-        <footer class="gctallasymodelosf">
-            <div>
+        <footer class="row">
+            <div class="col-lg-4 col-md-4 col-sm-6">
                 <ul>
                     <div class="footerinstagram">
                         <li><img src="../assets/instagram-logo.png" alt="Instagram"></li>
@@ -99,18 +96,22 @@
                     </div>
                 </ul>
             </div>
-            <div>
-                <ul class="footerpaypal">
-                    <li><img src="../assets/paypal-logo.png" alt="PayPal"></li>
-                    <a href="https://www.paypal.com/cl/home">PayPal</a>
+            <div class="col-md-4 col-lg-3 col-sm-6">
+                <ul>
+                    <div class="footerpaypal">
+                        <li><img src="../assets/paypal-logo.png" alt="PayPal"></li>
+                        <a href="https://www.paypal.com/cl/home">PayPal</a>
+                    </div>
                 </ul>
             </div>
-            <p>© 2024 raneo. Todos los derechos reservados.</p>
-            <br><br>
+            <div class="col-lg-4 col-md-4 col-sm-12">
+                <p>© 2024 raneo. Todos los derechos reservados.</p>
+            </div>
         </footer>
+        </div>
     </div>
-<!--Script Bootstrap-->
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <!--Script Bootstrap-->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 </html>
