--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </header>
         <hr>
         <main class="row justify-content-evenly index">
-            <section class="col-lg-7 col-md-7 col-sm-12 tiposdediseño">
+            <section class="col-lg-6 col-md-6 col-sm-12 tiposdediseño">
                 <h1>Nuestros Diseños</h1>
                 <section class="camisetastipo">
                     <div class="accordion" id="accordionExample">
@@ -131,10 +131,12 @@
                     </div>
                 </ul>
             </div>
-            <div class="col-md-4 col-lg-4 col-sm-6">
-                <ul class="footerpaypal">
-                    <li><img src="./assets/paypal-logo.png" alt="PayPal"></li>
-                    <a href="https://www.paypal.com/cl/home">PayPal</a>
+            <div class="col-md-4 col-lg-3 col-sm-6">
+                <ul>
+                    <div class="footerpaypal">
+                        <li><img src="./assets/paypal-logo.png" alt="PayPal"></li>
+                        <a href="https://www.paypal.com/cl/home">PayPal</a>
+                    </div>
                 </ul>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12">
