Agrego detalles estéticos a letras, cambio colores, agrego animaciones y cambio Navbar

--- a/html/tallas-modelos.html
+++ b/html/tallas-modelos.html
@@ -16,27 +16,30 @@
 <body>
     <div class="container-fluid">
         <header class="row">
-            <nav class="col navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="../assets/raneo.jpg" alt="Raneo"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./productos-servicios.html">Productos/Servicios</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./tallas-modelos.html">Tallas/Modelos</a>
-                            </li>
-                        </ul>
+            <div class="banner">
+                <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+                    <div class="container">
+                        <a class="navbar-brand" href="../index.html"><img class="logo" src="../assets/raneo.jpg" alt="Raneo"></a>
+                        <!-- Botón Hamburguesa -->
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./productos-servicios.html">Productos/Servicios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./tallas-modelos.html">Tallas/Modelos</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
+            </div>
         </header>
         <hr>
         <main class="row gctallasymodelosm">
