--- a/html/productos-servicios.html
+++ b/html/productos-servicios.html
@@ -17,123 +17,116 @@
     <div class="container-fluid">
         <header class="row">
             <div class="banner">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                    <div class="container-fluid">
-                    <a class="navbar-brand" href="../index.html"><img class="logo" src="../assets/raneo.jpg" alt="Raneo"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="./productos-servicios.html">Productos/Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./tallas-modelos.html">Tallas/Modelos</a>
-                        </li>
-                        </ul>
-                    </div>
+                <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+                    <div class="container">
+                        <a class="navbar-brand" href="../index.html"><img class="logo" src="../assets/raneo.jpg" alt="Raneo"></a>
+                        <!-- Botón Hamburguesa -->
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./productos-servicios.html">Productos/Servicios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./tallas-modelos.html">Tallas/Modelos</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </nav>
             </div>
         </header>
         <hr>
         <aside class="row justify-content-evenly productos-servicios">
-            <!--<section class="col-lg-12 col-md-12 col-sm-12 filtrosyorden">
-                <div class="row">-->
-                    <article class="col-lg-6 col-md-7 col-sm-12 filtro">
-                        <img class="filtrosimg" src="../assets/filtro.png" alt="Filtros">
-                        <form action="" method="">
-                            <fieldset class="filtros">
-                                <legend>Filtros: </legend><br>
-                                <input type="checkbox" name="" id="">
-                                <label for="">Caricatura animal</label>
-                                <input type="checkbox" name="" id="">
-                                <label for="">Irreverente</label>
-                                <input type="checkbox" name="" id="">
-                                <label for="">Minimalista</label>
-                                <input type="submit" value="Filtrar">
-                            </fieldset>
-                        </form>
-                    </article>
-                    <article class="col-lg-6 col-md-4 col-sm-12 orden">
-                        <img class="ordenarimg" src="../assets/ordenar.png" alt="Ordenar según...">
-                        <form class="ordenar" action="" method="">
-                            <label for="">Ordenar por:</label>
-                            <select name="" id="">   
-                                <option value=""></option>
-                                <option value="">Precio menor a mayor</option>
-                                <option value="">Precio mayor a menor</option>
-                                <option value="">Popularidad mayor a menor</option>
-                                <option value="">Popularidad menor a mayor</option>
-                            </select>
-                            <input type="submit" value="Ordenar">
-                        </form>
-                    </article>
-                <!--</div>
-            </section>-->
+            <article class="col-lg-6 col-md-7 col-sm-12 filtro">
+                <img class="filtrosimg" src="../assets/filtro.png" alt="Filtros">
+                <form action="" method="">
+                    <fieldset class="filtros">
+                        <legend>Filtros: </legend><br>
+                        <input type="checkbox" name="" id="">
+                        <label for="">Caricatura animal</label>
+                        <input type="checkbox" name="" id="">
+                        <label for="">Irreverente</label>
+                        <input type="checkbox" name="" id="">
+                        <label for="">Minimalista</label>
+                        <input type="submit" value="Filtrar">
+                    </fieldset>
+                </form>
+            </article>
+            <article class="col-lg-6 col-md-4 col-sm-12 orden">
+                <img class="ordenarimg" src="../assets/ordenar.png" alt="Ordenar según...">
+                <form class="ordenar" action="" method="">
+                    <label for="">Ordenar por:</label>
+                    <select name="" id="">   
+                        <option value=""></option>
+                        <option value="">Precio menor a mayor</option>
+                        <option value="">Precio mayor a menor</option>
+                        <option value="">Popularidad mayor a menor</option>
+                        <option value="">Popularidad menor a mayor</option>
+                    </select>
+                    <input type="submit" value="Ordenar">
+                </form>
+            </article>
         </aside>
         <main class="row justify-content-evenly productos-servicios">
-            <!--<section class="col-lg-12 col-md-12 col-sm-12 catalogoservicio">
-                <div class="row">-->
-                    <section class="col-lg-8 col-md-12 col-sm-12 catalogo">
-                        <h1 class="titulocatalogo">Camisetas Raneo</h1>
-                        <article class="productos">
-                            <div class="rotate-in-center">
-                                <img class="imgproducto" src="../assets/diseño1.png" alt="">
-                                <p>Camiseta 1</p>
-                                <p>$22.000</p>
-                                <button type="button">Añadir al carrito</button>
-                            </div>
-                            <div class="rotate-in-center">
-                                <img class="imgproducto" src="../assets/diseño2.png" alt="">
-                                <p>Camiseta 2</p>
-                                <p>$18.000</p>
-                                <button type="button">Añadir al carrito</button>
-                            </div>
-                            <div class="rotate-in-center">
-                                <img class="imgproducto" src="../assets/diseño3.png" alt="">
-                                <p>Camiseta 3</p>
-                                <p>$15.000</p>
-                                <button type="button">Añadir al carrito</button>
-                            </div>
-                            <div class="rotate-in-center">
-                                <img class="imgproducto" src="../assets/diseño4.png" alt="">
-                                <p>Camiseta 4</p>
-                                <p>$22.000</p>
-                                <button type="button">Añadir al carrito</button>
-                            </div>
-                            <div class="rotate-in-center">
-                                <img class="imgproducto" src="../assets/diseño5.png" alt="">
-                                <p>Camiseta 5</p>
-                                <p>$15.000</p>
-                                <button type="button">Añadir al carrito</button>
-                            </div>
-                            <div class="rotate-in-center">
-                                <img class="imgproducto" src="../assets/diseño6.png" alt="">
-                                <p>Camiseta 6</p>
-                                <p>$18.000</p>
-                                <button type="button">Añadir al carrito</button>
-                            </div>
-                        </article>
-                    </section>
-                    <article class="col-lg-4 col-md-12 col-sm-12 otrosservicios">
-                        <h2>Otros servicios</h2>
-                        <img src="../assets/servicio.png" alt="Personaliza tu camiseta">
-                        <p>En <span>Raneo</span>, entendemos que cada persona tiene una idea única que quiere expresar, y nada mejor que hacerlo a través de una <span>camiseta personalizada</span>.
-                        Nuestro servicio de personalización de camisetas está diseñado para que puedas convertir tus ideas en una prenda que refleje exactamente lo que buscas. Ya sea un diseño artístico, una frase especial, un logo de empresa o incluso una fotografía, en <span>Raneo</span> nos aseguramos de hacer realidad tu visión.
-                        Solo necesitas enviarnos tu diseño a través de nuestra página web, redes sociales o en nuestra tienda física.
-                        Si no tienes un diseño completo, nuestro equipo puede ayudarte a desarrollarlo.
-                        Una vez que recibimos tu solicitud, nos encargamos de todos los pasos necesarios para llevar tu diseño a la camiseta.
-                        Finalmente, te entregamos el producto terminado en el menor tiempo posible. Puedes optar por recibir tu camiseta personalizada en tu domicilio o recogerla en nuestra tienda. Nuestro compromiso es brindarte un <span>servicio de alta calidad</span> y <span>atención personalizada</span>, asegurándonos de que tu experiencia con <span>Raneo</span> sea tan única como el diseño que creaste.
-                        En <span>Raneo</span>, creemos que las camisetas no son solo ropa: son una <span>forma de expresión</span>. ¡Anímate a personalizar la tuya con nosotros y <span>lleva tus ideas al siguiente nivel</span>!</p>
-                        <button type="button">Contáctanos</button>
-                    </article>
-                <!--</div>
-            </section>-->
+            <section class="col-lg-7 col-md-12 col-sm-12 catalogo">
+                <h1 class="titulocatalogo">¡Camisetas!</h1>
+                <article class="productos">
+                    <div class="rotate-in-center">
+                        <img class="imgproducto" src="../assets/diseño1.png" alt="">
+                        <p>Camiseta 1</p>
+                        <p>$22.000</p>
+                        <button type="button" class="btn btn-outline-success">Añadir al carrito!</button>
+                    </div>
+                    <div class="rotate-in-center">
+                        <img class="imgproducto" src="../assets/diseño2.png" alt="">
+                        <p>Camiseta 2</p>
+                        <p>$18.000</p>
+                        <button type="button" class="btn btn-outline-success">Añadir al carrito!</button>
+                    </div>
+                    <div class="rotate-in-center">
+                        <img class="imgproducto" src="../assets/diseño3.png" alt="">
+                        <p>Camiseta 3</p>
+                        <p>$15.000</p>
+                        <button type="button" class="btn btn-outline-success">Añadir al carrito!</button>
+                    </div>
+                    <div class="rotate-in-center">
+                        <img class="imgproducto" src="../assets/diseño4.png" alt="">
+                        <p>Camiseta 4</p>
+                        <p>$22.000</p>
+                        <button type="button" class="btn btn-outline-success">Añadir al carrito!</button>
+                    </div>
+                    <div class="rotate-in-center">
+                        <img class="imgproducto" src="../assets/diseño5.png" alt="">
+                        <p>Camiseta 5</p>
+                        <p>$15.000</p>
+                        <button type="button" class="btn btn-outline-success">Añadir al carrito!</button>
+                    </div>
+                    <div class="rotate-in-center">
+                        <img class="imgproducto" src="../assets/diseño6.png" alt="">
+                        <p>Camiseta 6</p>
+                        <p>$18.000</p>
+                        <button type="button" class="btn btn-outline-success">Añadir al carrito!</button>
+                    </div>
+                </article>
+            </section>
+            <article class="col-lg-4 col-md-12 col-sm-12 otrosservicios">
+                <h2>Otros servicios</h2>
+                <img src="../assets/servicio.png" alt="Personaliza tu camiseta">
+                <p>En <span>Raneo</span>, entendemos que cada persona tiene una idea única que quiere expresar, y nada mejor que hacerlo a través de una <span>camiseta personalizada</span>.
+                Nuestro servicio de personalización de camisetas está diseñado para que puedas convertir tus ideas en una prenda que refleje exactamente lo que buscas. Ya sea un diseño artístico, una frase especial, un logo de empresa o incluso una fotografía, en <span>Raneo</span> nos aseguramos de hacer realidad tu visión.
+                Solo necesitas enviarnos tu diseño a través de nuestra página web, redes sociales o en nuestra tienda física.
+                Si no tienes un diseño completo, nuestro equipo puede ayudarte a desarrollarlo.
+                Una vez que recibimos tu solicitud, nos encargamos de todos los pasos necesarios para llevar tu diseño a la camiseta.
+                Finalmente, te entregamos el producto terminado en el menor tiempo posible. Puedes optar por recibir tu camiseta personalizada en tu domicilio o recogerla en nuestra tienda. Nuestro compromiso es brindarte un <span>servicio de alta calidad</span> y <span>atención personalizada</span>, asegurándonos de que tu experiencia con <span>Raneo</span> sea tan única como el diseño que creaste.
+                En <span>Raneo</span>, creemos que las camisetas no son solo ropa: son una <span>forma de expresión</span>. ¡Anímate a personalizar la tuya con nosotros y <span>lleva tus ideas al siguiente nivel</span>!</p>
+                <button type="button">Contáctanos</button>
+            </article>
         </main>
         <hr>
         <footer class="row">
