--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&family=Poppins:wght@400&family=Lobster&family=Courier+Prime&display=swap" rel="stylesheet">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Estilos-->
@@ -16,27 +17,30 @@
 <body>
     <div class="container-fluid">
         <header class="row justify-content-between">
-            <nav class="col-sm-12 col-md-12 col-lg-12 navbar navbar-expand-lg bg-body-tertiary">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#"><img class="logo" src="./assets/raneo.jpg" alt="Raneo"></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./html/productos-servicios.html">Productos/Servicios</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./html/tallas-modelos.html">Tallas/Modelos</a>
-                            </li>
-                        </ul>
+            <div class="banner">
+                <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+                    <div class="container">
+                        <a class="navbar-brand" href="./index.html"><img class="logo" src="./assets/raneo.jpg" alt="Raneo"></a>
+                        <!-- Botón Hamburguesa -->
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="collapse navbar-collapse" id="navbarNav">
+                            <ul class="navbar-nav ms-auto">
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./index.html">Inicio</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./html/productos-servicios.html">Productos/Servicios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" aria-current="page" href="./html/tallas-modelos.html">Tallas/Modelos</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                </div>
-            </nav>
+                </nav>
+            </div>
             <!-- Este div corresponde a un carrusel de imágenes-->
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
@@ -108,7 +112,7 @@
                     </div>
                 </section>
             </section>
-            <article class="col-lg-4 col-md-4 col-sm-12 ubicacion">
+            <article class="col-lg-5 col-md-5 col-sm-12 ubicacion">
                 <h3>UBICACIÓN</h3>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d51240.98279267842!2d-72.14716888483491!3d-36.61287056084224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9668d7c2b6f00259%3A0x14fe84c4f1092ea8!2zQ2hpbGzDoW4sIMORdWJsZQ!5e0!3m2!1ses!2scl!4v1734300478053!5m2!1ses!2scl" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </article>
